--- a/error.html
+++ b/error.html
@@ -1,4 +1,7 @@
-﻿<!doctype html>
+---
+permalink: /404.html
+---
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -222,9 +225,7 @@ a.more-link {
 <body>
 
 <h1>404 Error Page</h1>
-
 <p class="zoom-area"><b>找不到</b> 你所需要的内容或者文件 </p>
-
 <section class="error-container">
   <span class="four"><span class="screen-reader-text">4</span></span>
   <span class="zero"><span class="screen-reader-text">0</span></span>
