--- a/error.html
+++ b/error.html
@@ -4,9 +4,17 @@ permalink: /404.html
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Css 404错误页</title>
-
+  <title>Error-艾丕欧网络GIT</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta name="keywords" content="艾丕欧网络GIT@ipioo.github.io"/>
+  <meta name="description" content="艾丕欧网络GIT@ipioo.github.io"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--网站图标-->
+  <link type="image/x-icon" href="./ico.jpeg" rel="icon"/>
+  <link type="image/x-icon" href="./ico.jpeg" rel="shortcut icon"/>
+  <!--Css-->
+  <link rel="stylesheet" type="text/css" href="./vendor/ResetCss/reset.css">
+  <link rel="stylesheet" type="text/css" href="./vendor/FontAwesome/css/font-awesome.min.css">
 <style>
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Catamaran:400,800");
@@ -227,9 +235,9 @@ a.more-link {
 <h1>404 Error Page</h1>
 <p class="zoom-area"><b>找不到</b> 你所需要的内容或者文件 </p>
 <section class="error-container">
-  <span class="four"><span class="screen-reader-text">4</span></span>
-  <span class="zero"><span class="screen-reader-text">0</span></span>
-  <span class="four"><span class="screen-reader-text">4</span></span>
+  <span class="four"><span class="screen-reader-text">E</span></span>
+  <span class="zero"><span class="screen-reader-text">R</span></span>
+  <span class="four"><span class="screen-reader-text">R</span></span>
 </section>
 
 </body>
