--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>vendor</title>
+	<title>艾丕欧网络GIT@ipioo.github.io</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="艾丕欧网络GIT@ipioo.github.io"/>
+    <meta name="description" content="艾丕欧网络GIT@ipioo.github.io"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--网站图标-->
+    <link type="image/x-icon" href="./ico.jpeg" rel="icon"/>
+    <link type="image/x-icon" href="./ico.jpeg" rel="shortcut icon"/>
+    <!--Css-->
+    <link rel="stylesheet" type="text/css" href="./vendor/ResetCss/reset.css">
+    <link rel="stylesheet" type="text/css" href="./vendor/FontAwesome/css/font-awesome.min.css">
 </head>
 <body>
-	<p>aaa</p>
+<p>艾丕欧网络GIT@ipioo.github.io</p>
 </body>
 </html>
