--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
 <body>
 <p>艾丕欧网络GIT@ipioo.github.io</p>
 </body>
+<script type="text/javascript" src="./vendor/Jquery/jquery-3.4.1.min.js"></script>
 </html>
