--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ipioo.github.io</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Bitter:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./vendor/BootStrap/Bootstrap3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./vendor/FontAwesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./static/style.css">
-    <link rel="stylesheet" href="./static/css/responsive.css">
-      <script src="./vendor/Html5shivJs/r29/html5.min.js"></script>
-      <script src="./vendor/RespondJs/respond.min.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>ipioo.github.io</title>
+        <!--网站图标-->
+        <link type="image/x-icon" href="./static/ico.jpeg" rel="icon"/>
+        <link type="image/x-icon" href="./static/ico.jpeg" rel="shortcut icon"/>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Bitter:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="./vendor/BootStrap/Bootstrap3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./vendor/FontAwesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./static/style.css">
+        <link rel="stylesheet" href="./static/css/responsive.css">
+        <script src="./vendor/Html5shivJs/r29/html5.min.js"></script>
+        <script src="./vendor/RespondJs/respond.min.js"></script>
     </head>
     <body>
     <div class="header-area">
