--- a/error.html
+++ b/error.html
@@ -10,8 +10,8 @@ permalink: /404.html
   <meta name="description" content="艾丕欧网络GIT@ipioo.github.io"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--网站图标-->
-  <link type="image/x-icon" href="./ico.jpeg" rel="icon"/>
-  <link type="image/x-icon" href="./ico.jpeg" rel="shortcut icon"/>
+  <link type="image/x-icon" href="./static/ico.jpeg" rel="icon"/>
+  <link type="image/x-icon" href="./static/ico.jpeg" rel="shortcut icon"/>
   <!--Css-->
   <link rel="stylesheet" type="text/css" href="./vendor/ResetCss/reset.css">
   <link rel="stylesheet" type="text/css" href="./vendor/FontAwesome/css/font-awesome.min.css">
