--- a/error.html
+++ b/error.html
@@ -2,6 +2,18 @@
 permalink: /404.html
 ---
 <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+
+</body>
+</html>
 <html>
 <head>
   <title>Error-艾丕欧网络GIT</title>
@@ -242,6 +254,6 @@ a.more-link {
 
 </body>
 <script>
-  setTimeout(window.location.replace("./index.html"),3000);
+  setTimeout(function (){window.location.replace("./index.html")},5000);
 </script>
 </html>
