--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="logo">
-                        <h1><a href="">Expand</a></h1>
+                        <h1><a href="">Ipioo@github</a></h1>
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="sr-only">Toggle navigation</span>
