--- a/error.html
+++ b/error.html
@@ -254,6 +254,6 @@ a.more-link {
 
 </body>
 <script>
-  setTimeout(function (){window.location.replace("https://kaadon.github.io/index.html")},3000);
+  setTimeout(function (){window.location.replace("https://kaadon.github.io/")},3000);
 </script>
 </html>
